--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Foodie - Supper delicious Burger in town!</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VJZJDL05HQ" style="user-select: auto;"></script> 
+    <script style="user-select: auto;">
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-VJZJDL05HQ');
+    </script>
+
   <!-- 
     - favicon
   -->
@@ -780,11 +790,11 @@
                 <div class="profile-wrapper">
 
                   <figure class="avatar">
-                    <img src="./assets/images/avatar-1.jpg" width="80" height="80" loading="lazy" alt="Robert William">
+                    <img src="./assets/images/pro_1_500.jpeg" width="80" height="80" loading="lazy" alt="Robert William">
                   </figure>
 
                   <div>
-                    <h3 class="h4 testi-name">Robert William</h3>
+                    <h3 class="h4 testi-name">Kabita Maurya</h3>
 
                     <p class="testi-title">CEO Kingfisher</p>
                   </div>
@@ -813,11 +823,11 @@
                 <div class="profile-wrapper">
 
                   <figure class="avatar">
-                    <img src="./assets/images/avatar-2.jpg" width="80" height="80" loading="lazy" alt="Thomas Josef">
+                    <img src="./assets/images/pro_1_500.jpeg" width="80" height="80" loading="lazy" alt="Thomas Josef">
                   </figure>
 
                   <div>
-                    <h3 class="h4 testi-name">Thomas Josef</h3>
+                    <h3 class="h4 testi-name">Kabita Maurya</h3>
 
                     <p class="testi-title">CEO Getforce</p>
                   </div>
@@ -846,11 +856,11 @@
                 <div class="profile-wrapper">
 
                   <figure class="avatar">
-                    <img src="./assets/images/avatar-3.jpg" width="80" height="80" loading="lazy" alt="Charles Richard">
+                    <img src="./assets/images/pro_1_500.jpeg" width="80" height="80" loading="lazy" alt="Charles Richard">
                   </figure>
 
                   <div>
-                    <h3 class="h4 testi-name">Charles Richard</h3>
+                    <h3 class="h4 testi-name">Kabita Maurya</h3>
 
                     <p class="testi-title">CEO Angela</p>
                   </div>
